--- a/assets/style.css
+++ b/assets/style.css
@@ -54,6 +54,19 @@ div {
     margin: 25px;
 }
 
+
+#scoreContainer h2 {
+    margin-bottom: 2px;
+}
+
+#formContainer {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    padding: 25px;
+    margin: 20px;
+}
+
 ul {
     list-style-type: none;
 }
@@ -78,6 +91,24 @@ li {
 .answer::selection {
     background-color:aquamarine;
     box-shadow: 2px 2px grey;
+}
+
+.isCorrect {
+    font-size: 20px;
+    padding: 10px 200px;
+    background-color: rgb(170, 255, 213);
+}
+
+.isIncorrect {
+    font-size: 20px;
+    padding: 10px 200px;
+    background-color: rgb(255, 189, 177);
+}
+
+.centered {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
 }
 
 .hidden {
